@@ -48,7 +48,7 @@ public class GuestTabService {
         ));
 
         GuestTab guestTab = GuestTab.builder()
-                .clientName(request.guestName())
+                .guestName(request.guestName())
                 .localTable(table)
                 .status(GuestTabStatus.OPEN)
                 .timeOpened(LocalDateTime.now())
@@ -63,7 +63,8 @@ public class GuestTabService {
     public List<GuestTabGetDTO> getGuestTabs() {
         return guestTabRepository.findAll().stream().map(x -> new GuestTabGetDTO(
                 x.getId(),
-                x.getClientName(),
+                x.getGuestName(),
+                x.getStatus().name(),
                 x.getTimeOpened(),
                 x.getLocalTable().getNumber())).toList();
     }
@@ -73,14 +74,19 @@ public class GuestTabService {
     public List<GuestTabGetDTO> getGuestTabsByTableNumber(int tableNumber) {
         List<GuestTabGetDTO> result = guestTabRepository.findByLocalTable(
                 localTableRepository.findByNumber(tableNumber).stream().findFirst().orElse(null)
-        ).stream().map(x -> new GuestTabGetDTO(
-                x.getId(),
-                x.getClientName(),
-                x.getTimeOpened(),
-                x.getLocalTable().getNumber()
-        )).toList();
+        ).stream().map(this::convertGuestTabToGetDTO).collect(Collectors.toList());
 
         return result;
+    }
+
+    public GuestTabGetDTO convertGuestTabToGetDTO(GuestTab guestTab) {
+        return GuestTabGetDTO.builder()
+                .id(guestTab.getId())
+                .tableNumber(guestTab.getLocalTable().getNumber())
+                .name(guestTab.getGuestName())
+                .status(guestTab.getStatus().name())
+                .timeOpened(guestTab.getTimeOpened())
+                .build();
     }
 
     /*public List<GuestTabGetDTO> getGuestTabsByTableNumber(int tableNumber) {
@@ -101,7 +107,7 @@ public class GuestTabService {
         if (guestTab == null) return null;
         return SimpleGuestTabDTO.builder()
                 .id(guestTab.getId())
-                .clientName(guestTab.getClientName())
+                .clientName(guestTab.getGuestName())
                 .build();
     }
 
